# pubmed_agent

./: .gitignore
backend/: pyproject.toml  railway.toml
backend/app/: main.py
backend/app/models/: schemas.py
backend/app/routers/: drive.py  evaluate.py  pubmed.py
backend/app/services/: claude_service.py  eval_service.py  pubmed_service.py  supabase_service.py
frontend/: README.md
frontend/src/app/: page.tsx
frontend/src/app/drive/: page.tsx
frontend/src/app/eval/: page.tsx
frontend/src/lib/: api.ts
