[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.96.0",
    "fastapi>=0.136.0",
    "httpx>=0.28.1",
    "langfuse>=4.5.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "sentry-sdk>=2.58.0",
    "supabase>=2.28.3",
    "uvicorn>=0.46.0",
]
