[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.96.0",
    "fastapi>=0.136.0",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "langfuse>=4.5.0",
    "loguru>=0.7.3",
    "python-dotenv>=1.2.2",
    "sentry-sdk>=2.58.0",
    "supabase>=2.28.3",
    "uvicorn>=0.46.0",
]
